menu refactor, better combat pane